--- a/www/css/style.css
+++ b/www/css/style.css
@@ -30,7 +30,11 @@
         text-align: center;
         position:absolute; top:340px; 
         left:10px; right:10px;
+
     }
+#time::after{
+  content:"秒";
+}
     
     #mycanvas {
         color: #ffffff;
@@ -58,12 +62,14 @@
     
     #minute {
         font-size: 30px;
-        position:absolute; top:450px; left:60px; width:80px; height:40px;   
+        position:absolute; top:450px; left:60px; width:80px; height:40px; 
+          border-radius: 20px;
     }
     
     #second {
         font-size: 30px;
-        position:absolute; top:450px; left:190px; width:80px; height:40px;   
+        position:absolute; top:450px; left:190px; width:80px; height:40px; 
+         border-radius: 20px;
     }
     
     input[type=number] {text-align: right;}
